--- a/AuctionApp-app-client/nbproject/project.properties
+++ b/AuctionApp-app-client/nbproject/project.properties
@@ -64,7 +64,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=auctionappappclient.AuctionGui
+main.class=auctionappappclient.LoginGui
 manifest.file=${meta.inf}/MANIFEST.MF
 meta.inf=${source.root}/conf
 platform.active=default_platform
